Ajout de arrange(Comparator)