@@ -17,8 +17,10 @@ public class BookShelf {
     }
 
     public List<Book> arrange() {
-        return books.stream()
-                .sorted(Comparator.comparing(Book::getTitle))
-                .toList();
+        return arrange(Comparator.naturalOrder());
+    }
+
+    public List<Book> arrange(Comparator<Book> criteria) {
+        return books.stream().sorted(criteria).collect(Collectors.toList());
     }
 }
